--- a/Home.html
+++ b/Home.html
@@ -45,7 +45,7 @@
 
 <div class="col-lg-3 col-lg-3 col-sm-6 mt-3">
     <div class="card">
-  <img class="card-img-top" src="2.png" alt="Card image cap">
+  <img class="card-img-top" src="img/2.png" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Django</h5>
     <p class="card-text">bulid your first website.</p>
@@ -55,7 +55,7 @@
 </div>
 <div class="col-lg-3 col-lg-3 col-sm-6 mt-3">
     <div class="card">
-  <img class="card-img-top" src="3.png" alt="Card image cap">
+  <img class="card-img-top" src="img/3.png" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Learn .NET </h5>
     <p class="card-text">Easy fast and free .</p>
@@ -65,7 +65,7 @@
 </div>
 <div class="col-lg-3 col-lg-3 col-sm-6 mt-3">
     <div class="card">
-  <img class="card-img-top" src="4.jpg" alt="Card image cap">
+  <img class="card-img-top" src="img/4.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Software development</h5>
     <p class="card-text">your guide to development.</p>
@@ -75,7 +75,7 @@
 </div>
 <div class="col-lg-3 col-lg-3 col-sm-6 mt-3">
     <div class="card">
-  <img class="card-img-top" src="5.jpg" alt="Card image cap">
+  <img class="card-img-top" src="img/5.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Java</h5>
     <p class="card-text">Start with example.</p>
@@ -85,7 +85,7 @@
 </div>
 <div class="col-lg-3 col-lg-3 col-sm-6 mt-3">
     <div class="card">
-  <img class="card-img-top" src="6.jpg" alt="Card image cap">
+  <img class="card-img-top" src="img/6.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Android</h5>
     <p class="card-text">Easy Fast and free.</p>
@@ -95,7 +95,7 @@
 </div>
 <div class="col-lg-3 col-lg-3 col-sm-6 mt-3">
     <div class="card">
-  <img class="card-img-top" src="7.jpg" alt="Card image cap">
+  <img class="card-img-top" src="img/7.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">RESTful API</h5>
     <p class="card-text">Quick guide for Rest API.</p>
@@ -105,7 +105,7 @@
 </div>
 <div class="col-lg-3 col-lg-3 col-sm-6 mt-3">
     <div class="card">
-  <img class="card-img-top" src="8.jpg" alt="Card image cap">
+  <img class="card-img-top" src="img/8.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Data science</h5>
     <p class="card-text">Simple course .</p>
